fixed bug with advanced-search btn not displaying properly; aligned advanced-search-label to align with the center of their accompanied inputs

--- a/search/styles.css
+++ b/search/styles.css
@@ -90,6 +90,7 @@ body {
 
 .advanced-search-row {
     display: flex;
+    align-items: center;
     margin: 13px 0 0 0;
 }
 
